[style] change some variable names

--- a/app.ipynb
+++ b/app.ipynb
@@ -100,7 +100,7 @@
         "                adj_matrix_to_image(data.adj_matrix)\n",
         "            ]\n",
         "        )\n",
-        "    # TODO: Find the landing zone closest to the human\n",
+        "    # TODO: Find the landing zone closest to the person\n",
         "    # considering the terrain elevation.\n",
         "    MOCK_SHORTEST_PATH = [(0,0), (0,1), (0,2), (1,2), (2,2), (2, 3)]\n",
         "    shortest_path = MOCK_SHORTEST_PATH\n",
@@ -117,7 +117,7 @@
         "            )\n",
         "        else:\n",
         "            plot_frame(data.frame)\n",
-        "            print('No path to the human!')"
+        "            print('No path to the person!')"
       ],
       "execution_count": null,
       "outputs": []
@@ -218,7 +218,7 @@
         "id": "KamloMSvgL9I"
       },
       "source": [
-        "### Random Image With the Shortest Path to the Human"
+        "### Random Image With the Shortest Path to the Person"
       ]
     },
     {
