Add documentation for the App
Co-authored-by: leonardom.miranda <leonardomichalskim@gmail.com>

--- a/app.ipynb
+++ b/app.ipynb
@@ -339,6 +339,22 @@
   },
   "cells": [
     {
+      "source": [
+        "## Closest Landing Zone\n",
+        "\n",
+        "This algorithm finds the closest and reachable safe landing zone next to the human who's waiting for the UAV. \n",
+        "We generated some mock test data from Pokemon Emerald. These are the rules for it:\n",
+        "\n",
+        "*  The UAV can only land in the green area with low grass.\n",
+        "\n",
+        "* A human can move between areas with tall grass and low grass, but not trees.\n",
+        "\n",
+        "* The closest path is not always the most obvious as there are unevenness between the terrains, so the algorithm must be able to find the shortest path taking it into account. There might also be a landing zone that is so high that it is unreachable by a human, like the roof of a house. So even if it's the closest place the UAV cannot land there."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "collapsed": true,
@@ -448,6 +464,22 @@
       "outputs": []
     },
     {
+      "source": [
+        "## How to use\n",
+        "\n",
+        "The app generate a random image for each iteration. Everytime you click the update button, a new random image is generated and the algorithm gets executed."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "### Generate random image of the terrain where the drone will land "
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "collapsed": true,
@@ -485,9 +517,7 @@
       "metadata": {
         "id": "1gYLqJgWgHYt"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
